src/css/custom.css
/* ... */
.theme-doc-toc-mobile > button {
  padding: 1rem 0;
}

.theme-doc-toc-mobile > button + div {
  background-color: var(--cai-color-background-dark);
}

.table-of-contents {
  border: 0;
  padding: var(--ifm-menu-link-padding-vertical) 0;
}

.table-of-contents__link:hover,
.table-of-contents__link--active {
  color: var(--ifm-navbar-link-hover-color);
}

.table-of-contents__link--active {
  font-weight: bold;
}

.theme-doc-sidebar-container {
  border: 0 !important;
}

.theme-doc-toc-desktop,
.theme-doc-markdown,
.theme-doc-sidebar-container .menu {
  padding: 2rem 0.5rem;
}

.theme-doc-sidebar-container + main > .container {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

.theme-doc-breadcrumbs {
  display: none;
}

.theme-doc-sidebar-menu > .menu__list-item {
  font-weight: 700;
  font-family: var(--cai-font-family-acuminpro-bold);
}

.theme-doc-sidebar-menu > .menu__list-item > .menu__list {
  font-weight: 500;
  font-family: var(--cai-font-family-acuminpro-regular);
}

.theme-doc-sidebar-menu .menu__link,
.theme-doc-sidebar-menu .menu__list-item,
.theme-doc-sidebar-menu .menu__list {
  position: relative;
}

.theme-doc-sidebar-menu .menu__list-item .menu__list::before {
  content: '';
  display: block;
  position: absolute;
  top: var(--ifm-menu-link-padding-vertical);
  left: var(--ifm-menu-link-padding-horizontal);
  height: calc(
    100% - var(--ifm-menu-link-padding-vertical) -
      var(--ifm-menu-link-padding-vertical)
  );
  width: 2px;
  background: var(--cai-color-background-dark);
}

.theme-doc-sidebar-menu
  .menu__list-item
  .menu__list
  .menu__link--active::before {
  content: '';
  display: block;
  position: absolute;
  top: var(--ifm-menu-link-padding-vertical);
  left: 0;
  height: calc(
    100% - var(--ifm-menu-link-padding-vertical) -
      var(--ifm-menu-link-padding-vertical)
  );
  width: 2px;
  background: var(--ifm-color-primary);
}

.theme-doc-sidebar-menu .menu__link--sublist-caret::after {
  background: var(--ifm-menu-link-sublist-icon) 50% / 1.5rem 1.5rem;
}

/* Code in sidebar: scale down (monospace appears too large at default size) */
.theme-doc-sidebar-menu .menu__link code {
  font-size: 0.85em;
  padding: 0.05em 0.2em;
}

.navbar-sidebar__brand {
  box-shadow: none;
}

@media (max-width: 996px) {
  .navbar__items {
    flex-flow: row-reverse;
    justify-content: space-between;
  }
}

/*  Admonitions */

.admonition-heading h5 {
  display: flex;
  flex-flow: row;
  align-items: center;
  justify-content: flex-start;
  margin-bottom: 0.25em;
}

.admonition-icon {
  margin-right: 0.9em;
}

.admonition-icon svg {
  width: 18px;
  height: 18px;
}

.alert--info,
.alert--secondary {
  --ifm-alert-background-color: var(--ifm-color-primary-light);
  --ifm-alert-background-color-highlight: var(--ifm-color-primary-light);
  --ifm-alert-border-color: var(--ifm-color-primary);
}

.alert--warning,
.alert--success {
  --ifm-alert-background-color: var(--ifm-color-secondary-light);
  --ifm-alert-background-color-highlight: var(--ifm-color-secondary-light);
  --ifm-alert-border-color: var(--ifm-color-secondary);
}

/* Responsiveness */
@media (min-width: 2000px) {
  .container {
    max-width: var(--ifm-container-width-xxl);
  }
}
/* Cookie Pro */

.ot-sdk-show-settings {
  background: transparent;
  font: inherit;
  border: 0;
  padding: 0;
  margin: 0;
  line-height: inherit;
  letter-spacing: inherit;
  box-shadow: none;
  cursor: pointer;
}

.ot-sdk-show-settings:hover {
  text-decoration: underline;
}

[data-theme='light'] .DocSearch {
  --docsearch-highlight-color: var(--cai-color-primary-dark);
}

[data-theme='dark'] .DocSearch {
  --docsearch-highlight-color: var(--cai-color-primary-dark);
}

/* For inline styling */

.review-comment {
  background-color: yellow;
  padding: 5px;
  font-style: italic;
  margin-bottom: 10px;
}

.code_summary {
  background-color: #dee0e2 !important;
  padding: 5px;
  border-radius: 5px;
  border: 1px solid #e6e3e0;
  padding-left: 10px;
  margin-bottom: 0;
  font-weight: bold;
}

.code_details {
  background-color: transparent;
  padding: 0;
}

.roadmap_table {
  width: 100%;
  table-layout: fixed;
}

.trust-table th:nth-child(1) {
  width: 170px;
}

/* For content to be displayed only in GitHub. Typically this will be used in imported markdown files. */

.github-only {
  display: none;
}

/* For JSON reference headers
*/

.scroll-target,
.markdown span[id] {
  scroll-margin-top: 130px; /* Slightly more than title bar */
}

.warning {
  background-color: rgb(250, 56, 62, 0.15);
  padding: 0 10px;
  border-radius: 5px;
  border: 1px solid rgb(122, 2, 2);
}

.warning::before {
  content: '⚠️ WARNING: ';
  margin-right: 10px;
}

